Fixed overflow on multiselect drop down, and made it so the grouped by category timeline  headers are centered and boldedis

--- a/styles/slider_styles.css
+++ b/styles/slider_styles.css
@@ -44,7 +44,7 @@
     background: #94b3ae; 
     border-radius: 20px;  
     outline: #fff;
-    overflow: hidden; 
+   
 }
 
 .slider select {
